--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
             <img srcset="assets/images/hero--smaller.jpg 640w, assets/images/hero--smaller-hi-dpi.jpg 1280w" alt="Coastal view of ocean and mountains" class="large-hero__image">
         </picture>
 
-        <div class="large-hero__text-content">
+        <div class="large-hero__text-context">
             <div class="wrapper">
                 <h1 class="large-hero__title">Your clarity.</h1>
                 <h2 class="large-hero__subtitle">One trip away.</h2>
@@ -154,8 +154,10 @@
         </div>
     </div>
 
-    <footer>
-        <p>Copyright &copy; 2019 Clear View Escapes. All rights reserved. <a href="#" class="btn btn--orange">Get in Touch</a></p>
+    <footer class="site-footer">
+        <div class="wrapper">
+            <p><span class="site-footer__text"> &copy; 2019 Clear View Escapes. All rights reserved. </span><a href="#" class="btn btn--orange">Get in Touch</a></p>
+        </div>
     </footer>
     <!-- Leave this commented out HTML here until you need it for an upcoming "modal" lesson
   <div class="modal">
