Having fun with the site

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
-    <title>Selamlar Türhan Hanim</title>
+    <title>PLAYGROUND</title>
     <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel">
     <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
 </head>
@@ -45,10 +45,10 @@
 
         <div class="large-hero__text-context">
             <div class="wrapper">
-                <h1 class="large-hero__title">Your clarity.</h1>
-                <h2 class="large-hero__subtitle">One trip away.</h2>
-                <p class="large-hero__description">We create soul restoring journeys that inspire you to be you.</p>
-                <p><a href="#" class="btn btn--orange btn--large open-modal">Get Started Today</a></p>
+                <h1 class="large-hero__title">SELAMLAR TÜRHAN HANIM</h1>
+                <h2 class="large-hero__subtitle">AZ ONCE HACKLENDINIZ</h2>
+                <p class="large-hero__description">HEMEN BANA GELIN :)</p>
+                <p><a href="#" class="btn btn--orange btn--large open-modal">BURAYA SAKIN TIKLAMA</a></p>
             </div>
         </div>
     </div>
@@ -175,6 +175,7 @@
         </div>
     </footer>
 
+    <script src="bundled.js"></script>
 </body>
 
 </html>
